# ugh-quantamental

./: .gitignore  AGENTS.md  CLAUDE.md  PLANS.md  README.md  alembic.ini  fx_protocol.db  pyproject.toml
.claude/hooks/: session-start.sh
.claude/memory/: 2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-27.md  2026-06-28.md  STATUS.md  _index.md
.github/workflows/: ci.yml  fx-analysis-pipeline.yml  fx-daily-protocol.yml  fx-monthly-review.yml  fx-weekly-report.yml  review-autofix.yml
.semantic-ci/: target.yaml
alembic/: env.py
alembic/versions/: 0001_initial_persistence.py  0002_add_regression_suite_baselines.py  0003_add_fx_forecast_records.py  0004_add_fx_outcome_and_evaluation_records.py  0005_add_review_audit_records.py
csv/: provider_health.csv
csv/analytics/: labeled_observations.csv  slice_scoreboard.csv  tag_scoreboard.csv
csv/annotations/: ai_annotation_suggestions.csv  manual_annotations.csv  manual_annotations.template.csv
csv/evaluations/: USDJPY_20260323_evaluation.csv  USDJPY_20260327_evaluation.csv  USDJPY_20260330_evaluation.csv  USDJPY_20260331_evaluation.csv  USDJPY_20260401_evaluation.csv  USDJPY_20260402_evaluation.csv  USDJPY_20260406_evaluation.csv  (+25 more)
docs/: engine_review_2026_05_planning.md  engine_review_2026_06_planning.md  phase3_design.md  refactoring_plan.md  test_cleanup_spike.md  test_metrics.md
scripts/: build_notification_summary.py  rebuild_fx_analytics.py  run_fx_analysis_pipeline.py  run_fx_daily_protocol.py  run_fx_monthly_review.py  run_fx_weekly_report.py
tests/: test_import_smoke.py
(+1001 files in other folders)
