[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugh-quantamental"
version = "0.1.0"
description = "Bootstrap package for quantamental projection/state experimentation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
