[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugh-quantamental"
version = "0.1.0"
description = "Deterministic quantamental engines with persistence, workflow composition, query inspection, batch replay, regression suite execution, baseline / golden snapshot management, and FX daily prediction protocol."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dependencies = ["pydantic>=2,<3", "SQLAlchemy>=2,<3", "alembic>=1.13,<2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
